--- a/static/order-delivery.html
+++ b/static/order-delivery.html
@@ -1,5 +1,5 @@
 <html>
   <body>
-    <script src="https://topnotch.wm.store​/static/js/embed.js"></script>
+    <script src="https://topnotchdelivery.wm.store​/static/js/embed.js"></script>
   </body>
 </html>
